@@ -1,3 +1,7 @@
+2005-04-13  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC4-cvs-b10
+
+	* Change: New breadcrumb needed updating in slideshow and view_captions
+
 2005-04-13  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC4-cvs-b9
 
 	* Change: Remove EZPrints as an option for print providers at their
